# kanjidle-discord-bot

./: .gitattributes  .gitignore  README.md  compose.dev.yml  compose.yml  package-lock.json
app/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
app/public/: manifest.json
app/src/: App.tsx  index.css  main.tsx
app/src/components/: Coin.tsx  CoinExample.tsx  CoinPlaceholder.tsx  CustomToast.tsx  CustomToaster.tsx  Puzzle.tsx  SettingsDialog.tsx  StatsDialog.tsx
app/src/db/: Result.tsx  db.ts
app/src/hooks/: useLocalStorage.ts
app/src/providers/: StatsContext.ts
app/src/query/: api.ts
kanjidle-server/app/: package.json  tailwind.config.js  tsconfig.node.json
kanjidle-server/app/src/: App.tsx  main.tsx
kanjidle-server/app/src/components/: CoinPlaceholder.tsx  CustomToast.tsx  Puzzle.tsx  SettingsDialog.tsx
kanjidle-server/app/src/providers/: SettingsContext.ts  StatsContext.ts
kanjidle-server/app/src/util/: theme.ts  toFixed.ts
kanjidle-server/server/: README.md
kanjidle-server/server/src/: main.rs
server/: Cargo.toml  Dockerfile  README.md
server/src/: data.rs  generate.rs  main.rs
src/: main.py
src/query/: api.py
src/secrets/: __init__.py  secrets.py
