[package]
name = "kanjidle-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kanjidle-server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.89"
axum = "0.7.7"
chrono = "0.4.38"
csv = "1.3.0"
indexmap = { version = "2.6.0", features = ["serde"] }
itertools = "0.13.0"
ordered-float = "4.4.0"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
regex = "1.11.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { package = "serde_json_path_to_error", version = "0.1.4" }
tokio = { version = "1.40.0", features = ["full"] }
tower = { version = "0.5.1", features = ["util", "limit", "buffer"] }
tower-http = { version = "0.6.1", features = ["fs", "trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
unicode-jp = "0.4.0"
